Routing updated + work on docsRoute was started

--- a/src/style.css
+++ b/src/style.css
@@ -45,3 +45,10 @@ b {
 .letter__fields-wrapper {
     min-height: 250px;
 }
+
+/* .nav */
+.nav {
+    display: flex;
+    column-gap: 20px;
+    margin-bottom: 30px;
+}
