--- a/src/style.css
+++ b/src/style.css
@@ -54,14 +54,21 @@ b {
 }
 
 /* blList */
-.blList {
+.docs {
     display: flex;
+    flex-wrap: wrap;
     column-gap: 10px;
+    row-gap: 10px;
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 
-.bl {
+.doc-link {
     cursor: pointer;
-    padding: 2px;
+    padding: 2px 7px;
     border: 1px solid royalblue;
+}
+
+.doc-link:hover {
+    border-color: black;
 }
