--- a/src/style.css
+++ b/src/style.css
@@ -104,6 +104,12 @@ b {
     margin-bottom: 10px;
 }
 
+.docs__form--empty {
+    margin-top: 20px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
 .doc-link {
     cursor: pointer;
     padding: 2px 7px;
