--- a/src/style.css
+++ b/src/style.css
@@ -150,7 +150,6 @@ b {
     display: none;
 }
 
-.export-section__date {
-    margin-top: 40px;
-    margin-bottom: 30px;
+.export__FCA {
+    margin-bottom: 10px;
 }
