--- a/src/style.css
+++ b/src/style.css
@@ -55,8 +55,8 @@ b {
 }
 
 /* .input */
-.input {
-    width: 140px;
+.input-text {
+    max-width: 140px;
     max-height: 25px;
     min-height: 25px;
 }
@@ -80,7 +80,7 @@ b {
 /* select*/
 .select-wrapper {
     display: flex;
-    align-items: baseline;
+    align-items: center;
     justify-content: space-between;
     column-gap: 15px;
 }
