checkbox formik component fixed (checked prop added), added beta feature turn off form validation, validation fn refactored (now get error desc in getValidationError fn with cb in param)

--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,10 @@ b {
 }
 
 .main-route {
+    display: flex;
+    flex-direction: column;
     padding: 10px;
+    min-height: 100vh;
 }
 
 /* .input */
@@ -246,4 +249,9 @@ b {
 
 .radio-wrapper input {
     cursor: pointer;
+}
+
+.checkbox-validation {
+    padding-top: 20px;
+    margin-top: auto;
 }
