bug with tableName in offer xlsx tmp fixed

--- a/src/style.css
+++ b/src/style.css
@@ -98,6 +98,10 @@ b {
 }
 
 /* .letter__fields */
+.letter__form {
+    margin-top: 20px;
+}
+
 .letter__fields {
     display: flex;
     flex-direction: column;
