--- a/src/style.css
+++ b/src/style.css
@@ -178,7 +178,7 @@ b {
 
 /* .assortiment */
 .assortiment-form {
-    margin-top: 30px;
+    margin-top: 10px;
 }
 
 /* fields-wrapper */
@@ -265,10 +265,19 @@ b {
 }
 
 .error-route {
+    margin-top: 30px;
     margin-bottom: 30px;
 }
 
 .invalid-highlight {
     outline-offset: 5px;
     outline: 2px red solid;
+}
+
+.section__wrapper {
+    margin-top: 30px;
+}
+
+.section__title {
+    margin-bottom: 0px;
 }
