--- a/src/style.css
+++ b/src/style.css
@@ -295,6 +295,7 @@ b {
     position: fixed;
     top: 0;
 
+    pointer-events: none;
     opacity: 0.7;
     background-color: #000000;
     text-align: center;
@@ -319,8 +320,11 @@ b {
 
 .x-mark {
     border: none;
-    display: block;
-    width: 100%;
+    pointer-events: all;
+    display: flex;
+    margin-left: auto;
+    width: 20%;
+    justify-content: flex-end;
     background-color: transparent;
     text-align: end;
     padding-right: 5px;
