--- a/src/style.css
+++ b/src/style.css
@@ -390,3 +390,32 @@ b {
 .fesco-letter-form {
     margin-top: 20px;
 }
+
+/* dropzone */
+.dropzone-base {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border: 2px dashed;
+    border-radius: 2;
+    border-color: #eeeeee;
+    background-color: #fafafa;
+    color: #bdbdbd;
+    outline: none;
+    transition: border .24s ease-in-out;
+
+}
+
+.dropzone-focused {
+    border-color: red;
+}
+
+.dropzone-accept {
+    border-color: #00e676;
+}
+
+.dropzone-reject {
+    border-color: #ff1744;
+}
